# needly

./: README.md
needly/: pyproject.toml
needly/needly/: __init__.py  needly.py
