[tool.poetry]
name = "needly"
version = "2.5.0"
description = "Python Needle Editor for openQA"
authors = ["Lukáš Růžička <lruzicka@redhat.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
