[tool.poetry]
name = "needly"
version = "2.5.2"
description = "Python Needle Editor for openQA"
authors = ["Lukáš Růžička <lruzicka@redhat.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
needly = 'needly.needly:main'
